# iris_classification

./: Iris_Classification.ipynb  pyproject.toml
